# ps1-decimator

./: .gitignore  LICENSE  LICENSE.md  README.md  __init__.py  blender_manifest.toml  get_wheels.sh  pyproject.toml
.github/workflows/: build.yml  pages.yml
docs/: extensions.html  index.html
ps1_decimator/: __init__.py  materials.py  operators.py  ui.py
ps1d/: __init__.py  materials.py  operators.py  ui.py
