[project]
name = "blender-addons"
version = "0.1.0"
description = ""
authors = [
    {name = "Hamada",email = "11mhg@queensu.ca"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
    "bpy (>=4.5.1,<5.0.0)",
    "numpy (>=1.26.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
