[project]
name = "blender-addons"
version = "0.1.0"
description = ""
authors = [
    {name = "Hamada",email = "11mhg@queensu.ca"}
]
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
    "bpy (>=4.5.1,<5.0.0)",
    "numpy (>=1.26.0)",
    "typing_extensions (>=4.8.0)",
    "sympy (>=1.12)",
    "networkx (>=3.2)",
    "filelock (>=3.12)",
    "fsspec (>=2024.6.0)",
    "jinja2 (>=3.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
